Fixing vertical spacing in who page

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -394,7 +394,7 @@ dl {
     width: 100%;
     max-height: 600px;
     text-align: center;
-    background: url(../img/cambridge.jpg) no-repeat bottom center scroll;
+    background: url(../img/cambridge2.jpg) no-repeat bottom center scroll;
     background-color: @dark;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -413,7 +413,7 @@ dl {
 
     h1 {
         color: #000;
-        margin-bottom: 350px;
+        margin-bottom: 1em;
     }
 
     h2 {
@@ -433,15 +433,26 @@ dl {
 
     @media(max-width:1000px) {
         padding-top: 60px;
-
         .lineup-left, .lineup-right {
             dl {
-                color: #000;
                 font-size: 18px;
             }
 
             a { color: #000;}
         }
+
+        .lineup-left {
+            dl {
+                color: #000;
+            }
+        }
+
+        .lineup-right {
+            dl {
+                color: #FFF;
+            }
+        }
+
     }
 }
 
